--- a/deliverables/1_Daily_Run/inputs1.in
+++ b/deliverables/1_Daily_Run/inputs1.in
@@ -1,9 +1,7 @@
 login
-admin
-create
-Pablo Escobar
-99999.99
-create
-Pablo Escobar
-99999.99
+user
+Billy-Bob Thornton
+deposit
+10001
+10
 logout
